# school

./: .gitmodules  Assn-5-1.py  CalculateCircumfrence.py  Circles.py  InvestmentCalculator.py  PayStub.py  PerfectNumbers.py  TurtleExample.py
CS1/Assn11/: pattern.py
CS1/Assn12/: plan.txt
CS1/Assn14/: assn14-task2.py
CS1/Assn15/: assn15-task1.py  assn15-task2.py
CS1/Assn4/: Cuboids.py
CS1/Assn5/: FutureValue.py
CS1/Assn7/: RockPaperScissors.py
CS1/Assn8/: PerfectNumbers.py
CS1400/Assn10/: assn10.py  chessboard.py  plan.txt
CS1400/Assn11/: assn11.py  pattern.py  plan.txt
CS1400/Assn12/: assn12-task1.py
CS1400/Assn13/: assn13-task1.py  chessboard.py  plan.txt
CS1400/Assn14/: assn14-task1.py  cuboid.py
CS1400/Assn4/: Snowman.py
CS1400/Assn5/: Target.py
CS1400/Assn8/: GameShow.py
WebDevelopment/Assign2/: 404.html  about.html  forbidden.html  teapot.html  techtips+css.html  techtips-css.html
cloudDevelopment/homework1/: bucket_list.py  pyproject.toml
cloudDevelopment/homework2/: .gitignore  Dockerfile  log.txt  pyproject.toml  requirements.txt
cloudDevelopment/homework2/provided/sample-requests/__MACOSX/sample-requests/: ._1612306374392  ._1612306375135  ._1612306375892
cloudDevelopment/homework2/src/: __init__.py  cli.py  poller.py  processor.py  retriever.py  tests.py
cloudDevelopment/homework2/src/samples/: delete.json  update.json
cloudDevelopment/widget-request-handler/: .gitignore  handler.py  processor.py  sample.json  validate.py
compilerConstruction/MIPS-code/: example1.asm  example2-hello.asm  example3-io.asm  example4-loop.asm  example5-call-args-on-stack.asm  example5-call.asm  example6-loop-call.asm
compilerConstruction/hw3/: --help  comments.dot  example.dot  graph.dot  identifiers.dot  integers.dot
compilerConstruction/p4-formatter/: test0.out
computerScience1/Assn10/: assn10.py  chessboard.py  plan.txt
computerScience1/Assn11/: assn11.py
computerScience1/Assn6/: RegularPolygonArea.py
computerScience1/Assn8/: GameShow.py
computerScience1/Assn9/: Task1.py
decisionMaking/bayesUpdating/: HW4-Bayes-Updating.md
decisionMaking/gameTheory/: README.md  dove_hawk_simulation.py  main.py
decisionMaking/midterm/: Question1.py  Question2.py  Question3.py  europeanMonteCarlo.py  main.py
decisionMaking/multiArmBandit/: HW2_Glenn_Jaren.py  README.md  example_from_class.py  main.py
decisionMaking/optimalStopping/: HW1_Glenn_Jaren.py  README.md  class.py  stopping.py
decisionMaking/options/: README.md  europeanMonteCarlo.py  main.py  wikipedia_brownian.motion_.py
deepLearning/finalProject/: 1-1-nn_features_30.ipynb  1-2-nn_features_3.ipynb  1-4-extract_features.ipynb  1-5-ml-approaches.ipynb  2-beijing-pm2.5.ipynb  nn_features_30.ipynb
deepLearning/hw1/: Glenn_Jaren_HW1Code.ipynb  main.py  pyproject.toml
deepLearning/hw2/: glenn_jaren_HW2Code.ipynb  neuron_outputs.py
deepLearning/hw3/: Glenn_Jaren_HW3_P1.ipynb  Glenn_Jaren_HW3_P4.ipynb  Gradient_Descent_MiniMNIST.ipynb  MNIST_LittleTuned.ipynb  pyproject.toml
deepLearning/hw4/: Alexnet.ipynb  CNN.ipynb  glenn_jaren_hw4code.ipynb  some-file.pkl
deepLearning/hw5/: Glenn_Jaren_HW5_P4 copy.ipynb  Glenn_Jaren_HW5_P5.ipynb  Glenn_Jaren_HW5_P6.ipynb
eventDrivenProgramming/MadLib/: settings.gradle
modernCPP/arrayPerformance/: CMakeLists.txt  CMakeLists.txt.in  main  main.cpp  sortutils.cpp  sortutils.hpp  test.txt
modernCPP/dynamicQueue/: CMakeLists.txt  array.hpp  main.cpp  priority_queue.hpp
modernCPP/gameOfLife/: CMakeLists.txt  LifeSimulator.cpp  LifeSimulator.hpp  RendererConsole.cpp  RendererConsole.hpp  main.cpp  rlutil.h
modernCPP/gameOfLife/patternfiles/: PatternAcorn.cpp  PatternAcorn.hpp  PatternBlinker.cpp  PatternBlinker.hpp  PatternBlock.cpp  PatternBlock.hpp  PatternGlider.cpp  PatternGlider.hpp  PatternGosperGliderGun.cpp  PatternGosperGliderGun.hpp
modernCPP/googleTest/: CMakeLists.txt  distributions.cpp  distributions.hpp  main.cpp
modernCPP/nbonacchi/: Assignment1  Assignment1.cpp  test.py
modernCPP/randomDistributions/: Assignment2.cpp  CMakeLists.txt  distributions.cpp  distributions.hpp
modernCPP/weights/: main.cpp  (+3 more)
(+367 files in other folders)
