[tool.poetry]
name = "homework1"
version = "0.1.0"
description = ""
authors = ["Jaren Glenn <jarenglenn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.24.88"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
mypy = "^0.982"
pylance = "^0.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
