[tool.poetry]
name = "homework2"
version = "0.1.0"
description = ""
authors = ["Jaren Glenn <jarenglenn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.24.95"
arc-cli = "^7.0.3"
click = "^8.1.3"
types-boto3 = "^1.0.2"
boto3-stubs = {extras = ["essential"], version = "^1.24.95"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
