[tool.poetry]
name = "hw1"
version = "0.1.0"
description = ""
authors = ["Jaren Glenn <jarenglenn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.3"
ipykernel = "^6.15.3"
pandas = "^1.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
