[tool.poetry]
name = "hw3"
version = "0.1.0"
description = ""
authors = ["Jaren Glenn <jarenglenn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.12.1"
torchvision = "^0.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
